--- a/src/main/resources/templates/index-update.html
+++ b/src/main/resources/templates/index-update.html
@@ -53,7 +53,7 @@
               <p class = "title">加減値(日)</p>
                   <input class ="text-box" type = "text">
               <div class = "menu" >
-                  <a class ="btn add" href="#" > 登録 </a>
+                  <a class ="btn add" href="#" > 更新 </a>
                   <a class ="btn return" th:href="${'/dateList'}" > 戻る </a>
               </div>
         </div>
