--- a/src/main/resources/templates/index-update.html
+++ b/src/main/resources/templates/index-update.html
@@ -54,7 +54,7 @@
                   <input class ="text-box" type = "text">
               <div class = "menu" >
                   <a class ="btn add" href="#" > 更新 </a>
-                  <a class ="btn return" th:href="${'/dateList'}" > 戻る </a>
+                  <a class ="btn return" th:href="@{/dateList}" > 戻る </a>
               </div>
         </div>
   </header>
