--- a/src/main/resources/templates/index-new.html
+++ b/src/main/resources/templates/index-new.html
@@ -41,22 +41,24 @@
     </style>
 </head>
  <header>
+      <form th:method="post">
        <div class = "block">
               <p class = "title">日付ID</p>
-                  <input class ="text-box" type = "text">
+                  <input class ="text-box" type = "text" name="NewId">
               <p class = "title">日付名</p>
-                  <input class ="text-box" type = "text">
+                  <input class ="text-box" type = "text" name="NewName">
               <p class = "title">加減値(年)</p>
-                  <input class ="text-box" type = "text">
+                  <input class ="text-box" type = "text" name="NewYear">
               <p class = "title">加減値(月)</p>
-                  <input class ="text-box" type = "text">
+                  <input class ="text-box" type = "text" name="NewMonth">
               <p class = "title">加減値(日)</p>
-                  <input class ="text-box" type = "text">
+                  <input class ="text-box" type = "text" name="NewDay">
               <div class = "menu" >
-                  <a class ="btn add" href="#" > 登録 </a>
+                  <input type="submit" class ="btn add" value="登録" />
                   <a class ="btn return" th:href="@{/dateList}" > 戻る </a>
               </div>
         </div>
+       </form>
   </header>
   <body>
   </body>
