--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <p th:text=${num}></p>
+    <table>
+        <tr>
+            <td>No.</td>
+            <td>日付ID</td>
+            <td>日付名</td>
+            <td>年月日</td>
+            <td>計算式</td>
+            <td>編集</td>
+        </tr>
+    </table>
 </body>
 </html>
