--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
           </style>
 </head>
 <body>
-    <p th:text=${num}></p>
+    <p th:text=${String}></p>
     <table border = 1 >
         <tr>
             <th>No.</th>
