日付式、計算の表示ができる

--- a/demo/bin/main/templates/index.html
+++ b/demo/bin/main/templates/index.html
@@ -27,9 +27,9 @@
             <td th:text="${eachVariable.count}"></td>
             <td th:text="${listVariable.dateId}"/>
             <td th:text="${listVariable.dateName}"/>
-            <td th:text="${listVariable.year}"/>
-            <td th:text="${listVariable.month}"/>
-            <td th:text="${listVariable.day}"/>
+            <td th:text="${listVariable.dateResult}"/>
+            <td th:text="${listVariable.dateCalc}"/>
+            <td/>
         </tr>
     </table>
 </body>
