create画面表示ができる

--- a/demo/bin/main/templates/create.html
+++ b/demo/bin/main/templates/create.html
@@ -55,7 +55,7 @@
                   <input class ="text-box" type = "text" name="NewDay">
               <div class = "menu" >
                   <input type="submit" class ="btn add" value="登録" />
-                  <a class ="btn return" th:href="@{/dateList}" > 戻る </a>
+                  <a class ="btn return" th:href="@{/}" > 戻る </a>
               </div>
         </div>
        </form>
