--- a/demo/src/main/resources/templates/update.html
+++ b/demo/src/main/resources/templates/update.html
@@ -54,7 +54,7 @@
               <p class = "title">加減値(日)</p>
                   <input class ="text-box" type = "text" th:value="*{day}">
               <div class = "menu" >
-                  <input type="submit" class ="btn add" value="更新" />
+                  <input type="submit" class ="btn add" value="更新" >
                   <a class ="btn return" th:href="@{/}" > 戻る </a>
               </div>
         </div>
