--- a/demo/bin/main/templates/update.html
+++ b/demo/bin/main/templates/update.html
@@ -41,18 +41,18 @@
     </style>
 </head>
  <header>
-       <form th:object = "${list}">
+       <form th:object = "${list}" th:method="post">
        <div class = "block">
               <p class = "title">日付ID</p>
-                  <input class ="text-box" type = "text" th:value="*{dateId}">
+                  <input class ="text-box" type = "text" th:field="*{dateId}">
               <p class = "title">日付名</p>
-                  <input class ="text-box" type = "text" th:value="*{dateName}">
+                  <input class ="text-box" type = "text" th:field="*{dateName}">
               <p class = "title">加減値(年)</p>
-                  <input class ="text-box" type = "text" th:value="*{year}">
+                  <input class ="text-box" type = "text" th:field="*{year}">
               <p class = "title">加減値(月)</p>
-                  <input class ="text-box" type = "text" th:value="*{month}">
+                  <input class ="text-box" type = "text" th:field="*{month}">
               <p class = "title">加減値(日)</p>
-                  <input class ="text-box" type = "text" th:value="*{day}">
+                  <input class ="text-box" type = "text" th:field="*{day}">
               <div class = "menu" >
                   <input type="submit" class ="btn add" value="更新" >
                   <a class ="btn return" th:href="@{/}" > 戻る </a>
