--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -11,59 +11,66 @@
               *{  margin : 0px ;
                   padding : 0px ;
                }
-        .header{
-                  margin : 0px 30px ;
-                  width : 90% ;
-               }
-             h3{  font-size : 20px ;
-                  padding-top : 45px ;
-               }
-         header{  background-color : #C2EEFF ;
-                  height : 185px ;
-               }
-     .text-area{  margin : 10px 0px 20px 0px ; }
-      .text-box{  width : 450px ;
-                  height : 30px ;
-                  font-size : 15px;
-               }
-     .form_head{  clear:both;  }
-          table{  clear : both ;
-                  width : 100% ;
-               }
-             tr{  height : 50px ; }
-             th{  background-color : #77EEFF ; }
-             td{  width : 17% ;
-                  text-align : center ;
-               }
-           .btn{  color : white ;
-                  display : inline-block ;
-                  height : 40px ;
-                  width : 100px ;
-                  margin-right: 20px;
-                  background-color : blue ;
-                  text-align : center ;
-                  line-height : 40px ;
-                  text-decoration : none ;
-                  font-weight : bold ;
-                  border : solid  #BBBBBB 2px ;
-               }
-           .bot{  display : flex ;
-               }
-    .min_button{  display : flex ;
-               }
-    .u_d_button{  margin : auto ;
-                  text-align : center ;
-                  padding : 5px 20px  ;
-                  border : solid #BBBBBB 3px ;
-                  text-decoration : none ;
-                  font-weight : bold ;
-               }
-        .update{  color : red ;
-                  background-color : #FFFFEE ;
-               }
-        .delete{  color : #EEEEEE ;
-                  background-color : red ;
-               }
+                header{  background-color : #C2EEFF ;
+                              height : 185px ;
+                          }
+                      .form_head{  clear:both;  }
+                            .header{  margin : 0px 30px ;
+                                      width : 90% ;
+                                   }
+                                       h3{  font-size : 20px ;
+                                            padding-top : 45px ;
+                                         }
+                                       .text-area{  margin : 10px 0px 10px 0px ; }
+                                             .text-box{  width : 450px ;
+                                                         height : 30px ;
+                                                         font-size : 15px;
+                                                      }
+                                       .bot{  display : flex ;
+                                              margin-bottom: 10px;       
+                                           }
+                                            .btn{  color : white ;
+                                                   width : 100px ;
+                                                   margin-right: 20px;
+                                                   background-color : blue ;
+                                                   font-weight: bold ;
+                                                   font-size: 16px ;
+                                                   text-align : center ;
+                                                   line-height : 40px ;
+                                                   text-decoration : none ;
+                                                   border : solid  #BBBBBB 2px ;
+                                                }
+                      table{  clear : both ;
+                              width : 100% ;
+                           }
+                         tr{  height : 50px ; }     
+                         th{  background-color : #77EEFF ; }
+                         td{  width : 17% ;
+                              text-align : center ;
+                           }
+                               .min_button{  display : flex ;
+                                             align-items: center ;
+                                             justify-content: space-around;
+                                            
+                                              
+                                             }
+                                  .u_d_button{  
+                                                padding : 3px 18px ;
+                                                text-align : center ;
+                                                
+                                                border : solid #BBBBBB 3px ;
+                                                text-decoration : none ;
+                                                font-weight: bold ;
+                                                font-size: 14px ;
+                                             }
+                                      .update{  color : red ;
+                                                background-color : #FFFFEE ;
+                                               
+                                             }
+                                      .delete{  color : #EEEEEE ;
+                                                background-color : red ;
+                                               
+                                             }
   </style>
 </head>
 <body>
@@ -76,8 +83,8 @@
            <input class ="text-box" type = "text" name="textData">
         </div>
         <div class = "bot">
-           <input type="submit" class ="btn run" value="計算実行"/>
-           <a class ="btn new" th:href="@{/create}"> 新規登録</a>
+           <button class ="btn" >計画実行</button>
+           <a class ="btn" th:href="@{/create}"> 新規登録</a>
         </div>
      </div>
 </form>
@@ -87,30 +94,27 @@
                 <th>No.</th>
                 <th>日付ID</th>
                 <th>日付名</th>
-                <th>年月日</th>
+                <th>計算結果</th>
                 <th>計算式(年月日)</th>
                 <th>編集</th>
             </tr>
-            <tr class="date-list" th:each="listVariable , eachVariable : ${list}">
+            <tr th:each="listVariable , eachVariable : ${list}">
                 <td th:text="${eachVariable.count}"/>
                 <td th:text="${listVariable.dateId}"/>
                 <td th:text="${listVariable.dateName}"/>
                 <td th:text="${listVariable.dateResult}"/>
                 <td th:text="${listVariable.dateCalc}"/>
-                <td >
+                <td>
                     <div class = "min_button" >
                      <form th:method="post">
                      <a  class ="u_d_button update" th:href="'update/'+ ${listVariable.dateId}" >更新</a>
                      </form>
                      <form th:method = "post" th:action="@{/{dateId}(dateId=${listVariable.dateId})}">
-                     <input type="submit"  class ="u_d_button delete" value="削除"/>
+                         <button class ="u_d_button delete">削除</button>
                      </form>
                     </div>
-                <td/>
+                </td>
             </tr>
-            </td>
-        </tr>
-
     </table>
    </header>
  </body>
